# Lightglue_Macth

./: CMakeLists.txt  Scaling.cpp  main.cpp
env/: 3rdparty_rk3588.cmake  3rdparty_rv1126.cmake  3rdparty_x86.cmake
include/: LightglueMatch.h  ORB_WORKER.h
resource/: ref_info.json  shot.txt  superpoint.rknn  test.json
src/: LightglueMatch.cpp  ORB_WORKER.cpp
